feat: setup base navigation structure

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -6,5 +6,10 @@
 	"errorAlert": {
 		"cancelBtnLabel": "Cancel",
 		"retryBtnLabel": "Retry"
+	},
+	"tabs": {
+		"search": "Search",
+		"settings": "Settings",
+		"profile": "Profile"
 	}
 }
