--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -6,5 +6,10 @@
 	"errorAlert": {
 		"cancelBtnLabel": "إلغاء",
 		"retryBtnLabel": "أعد المحاولة"
+	},
+	"tabs": {
+		"search": "بحث",
+		"settings": "إعدادات",
+		"profile": "الملف الشخصي"
 	}
 }
