feat: add auth flow

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -11,5 +11,19 @@
 		"search": "بحث",
 		"settings": "إعدادات",
 		"profile": "الملف الشخصي"
+	},
+	"settings": {
+		"sceneTitle": "Property Finder",
+		"sceneSubtitle": "مهمة الاختبار",
+		"authSettings": {
+			"title": "احصل على المزيد من الميزات!",
+			"description": "اضغط على “تفويض” لفتح قسم التطبيق السري!",
+			"authActionBtnLabel": "تفويض",
+			"logoutActionBtnLabel": "تسجيل خروج"
+		}
+	},
+	"profile": {
+		"sceneTitle": "تهانينا!",
+		"sceneSubtitle": "هذا القسم متاح فقط للمستخدمين المصرح لهم"
 	}
 }
