feat(Movies): add data layer

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -1,6 +1,10 @@
 {
 	"errors": {
 		"general": "حدث خطأ",
+		"unknown": "هناك خطأ ما",
+		"moviesSeachFailed": "فشل البحث عن الأفلام ، يرجى التحقق من الاتصال والمحاولة مرة أخرى",
+		"movieLoadFailed": "فشل تحميل الفيلم ، يرجى التحقق من الاتصال والمحاولة مرة أخرى",
+		"movieByIdNotFound": "عذرا ، لم نتمكن من العثور على معلومات حول هذا الفيلم",
 		"authFailed": "فشل التفويض ، يرجى المحاولة مرة أخرى"
 	},
 	"errorAlert": {
