feat(MoviewDetails): add visit website functionality

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -22,7 +22,8 @@
 	},
 	"movieDetails": {
 		"genresSectionTitle": "الأنواع",
-		"descriptionSectionTitle": "وصف"
+		"descriptionSectionTitle": "وصف",
+		"openWebsiteBtnLabel": "عرض الموقع"
 	},
 	"settings": {
 		"sceneTitle": "Property Finder",
