--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -22,7 +22,8 @@
 	},
 	"movieDetails": {
 		"genresSectionTitle": "Genres",
-		"descriptionSectionTitle": "Description"
+		"descriptionSectionTitle": "Description",
+		"openWebsiteBtnLabel": "View website"
 	},
 	"settings": {
 		"sceneTitle": "Property Finder",
