feat(settings/auth): add card title for authorized user

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -30,6 +30,7 @@
 		"sceneSubtitle": "مهمة الاختبار",
 		"authSettings": {
 			"title": "احصل على المزيد من الميزات!",
+			"titleAuthorized": "مرحبا بعودتك!",
 			"description": "اضغط على “تفويض” لفتح قسم التطبيق السري!",
 			"authActionBtnLabel": "تفويض",
 			"logoutActionBtnLabel": "تسجيل خروج"
